# news-scrapper

./: .env  .env.example  .gitignore  README.md  classifieds_Kallakurichi_14-03-2026 (8).json  classifieds_viewer.html  clean_json.py  discover_editions.py  docker-compose.yml  gen_html.py  pyproject.toml  render.yaml  scraped_data (1).json  scraped_data (1)_clean.json  tenders_viewer.html  thanthi_layout.html  tmp_out.txt
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  celerybeat-schedule.dir  debug_article.html  debug_home_index.html  debug_network.py  debug_scraper.py  main.py  pdf_scraper.py  requirements.txt  run_scrape.py  scrape_to_pdf.py  seed.py  seed_test_articles.py
backend/alembic/: env.py
backend/api/: router.py
backend/api/routes/: articles.py  editions.py  scrape.py  sections.py  tags.py
backend/core/: config.py  database.py  dependencies.py  logging_config.py
backend/escrapper_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/models/: db_models.py  schemas.py
backend/repositories/: article_repository.py  base_repository.py  crawl_run_repository.py  edition_repository.py
backend/scraper/: base_scraper.py  daily_thanthi_scraper.py  utils.py
backend/services/: celery_app.py  deduplication_service.py  scraping_orchestrator.py  summarization_service.py  tagging_service.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ArticleCard.vue  ArticleDetailModal.vue  FilterBar.vue  NavBar.vue  PdfScrapeModal.vue  SideBar.vue
tests/backend/: test_summarization.py  test_tagging.py
tests/frontend/: ArticleCard.spec.js
(+7 files in other folders)
